feat(federation): setup new structure for PowpegMigrationTest